Added specs and some refactoring

--- a/config/config.yml
+++ b/config/config.yml
@@ -6,10 +6,10 @@ debug_sniffer:
       js:
         parser:
           - js_parser
-      erb:
-        parser:
-           - rb_parser
-           - js_parser
+      # erb:
+      #   parser:
+      #      - rb_parser
+      #      - js_parser
 
 
 
